<resources>
    <string name="app_name">My economy</string>

    <!-- Buttons -->
    <string name="st_prev">Anterior</string>
    <string name="st_next">Siguiente</string>
    <string name="st_start">Comenzar</string>
    <string name="st_tut1">¡Bienvenido a la forma más sencilla de saber de cuanto dispones cada mes!</string>
    <string name="st_tut2">Olvidate de conexiones con bancos o de andar metiendo datos en el móvil cada vez que gastas algo.</string>
    <string name="st_tut3">Indica tus gastos mensuales, como hipoteca, la luz, etc, y márcalos cuando los hayan cobrado.</string>
    <string name="st_tut4">¡Y ya está!\nSiempre sabrás cuanto te queda por pagar cada mes y cuanto para lo que tú quieras.</string>
    <string name="title_activity_home">Home</string>

    <string name="mouth_jan">Enero</string>
    <string name="mouth_feb">Febrero</string>
    <string name="mouth_mar">Marzo</string>
    <string name="mouth_apr">Abril</string>
    <string name="mouth_may">Mayo</string>
    <string name="mouth_jun">Junio</string>
    <string name="mouth_jul">Julio</string>
    <string name="mouth_aug">Agosto</string>
    <string name="mouth_sep">Septiembre</string>
    <string name="mouth_oct">Octubre</string>
    <string name="mouth_nov">Noviembre</string>
    <string name="mouth_dec">Diciembre</string>

    <string name="custom_pref_name">App_data</string>

    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="badge">€</string>
    <string name="outstanding">Pendiente de abonar:</string>
    <string name="in_the_bank">En cuenta:</string>
    <string name="_not_set">No establecido</string>
    <string name="zero">0</string>
    <string name="ok">Entendido</string>
    <string name="numers_dont_matter">Porque no nos interesan tus números…</string>
    <string name="to_nobody">Ni a nosotros, ni a nadie que no seas tú.</string>
    <string name="no_personal_dates">Por este motivo, en esta aplicación no te vamos a pedir ningún dato personal, ni emails, ni teléfono, ni siquiera tu nombre.\n\nÚnicamente eligirás un nombre de usuario, el que quieras, y tus gastos quedarán anonimaménte relacionado a ese usuario.\n!Ojo! No pierdas el nombre elegido.\n\nSi más adelante, te gusta la app y quieres un sistema de recuperación en caso de pérdida, ya te comentaremos algo.</string>
    <string name="chooseId">¿Cuál va a ser tu usuario?</string>
    <string name="userHint">Mi usuario</string>
    <string name="emailHint">Mi email</string>
    <string name="rememberId">Recuerda conservarlo</string>
    <string name="repeat_id">Confirma el usuario</string>
    <string name="comeon">Continuar</string>
    <string name="fields_not_match">Los campos no coinciden</string>
    <string name="accept">Aceptar</string>
    <string name="isAlreadyInUse">Este nombre de usuario ya está siendo utilizado</string>


    <string name="db_unknown_email">unknown_email</string>
    <string name="connection_error">Oops... error de conexión</string>
    <string name="hello_again">Hola de nuevo…</string>
    <string name="nice_to_see_u">Nos alegra ver que vienes por aquí de vez en cuando.</string>
    <string name="wanna_set_email">Tal como te comentamos al principio, si te gusta Mi Economía para Dummies, te damos la opción de que asocies a tu usuario tu correo electrónico por si olvidas el usuario o no puedes recuerperarlo por algún motivo.\nen caso de no querer, siempre tendfrás esta opción disponible en el menú de configuración.\n¡Gracias!</string>
    <string name="no_thanks">No, gracias</string>
    <string name="send">Enviar</string>
    <string name="invalid_email_format">Formato incorrecto</string>
    <string name="unknow">Desconocido</string>
    <string name="email_field_empty">El campo email está vacio</string>
    <string name="openingToSet">3</string>
    <string name="some_empty_field">Hay algún campo vacio</string>
    <string name="ramdon_chars">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890</string>
    <string name="do_you_have_account">¿Ya tienes cuenta?</string>
    <string name="log_in">Inicia sesión</string>
    <string name="feature_to_do">Feature to do</string>


</resources>
