<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:orientation="vertical"
    tools:context=".SetEmail">


    <TextView
        android:id="@+id/tv_mounth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:fontFamily="@font/lato_black"
        android:text="@string/hello_again"
        android:textColor="@color/letter_high_emphasis"
        android:textSize="@dimen/letters_gigantic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_margin"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/nice_to_see_u"
        android:textColor="@color/letter_high_emphasis"
        android:textSize="@dimen/letters_big" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginTop="@dimen/standard_margin"
        android:layout_marginBottom="@dimen/standard_margin"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/wanna_set_email"
        android:textColor="@color/letter_medium_emphasis"
        android:textSize="@dimen/letters_small" />


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/standard_margin"
        android:layout_weight="1"
        android:enabled="true"
        android:focusedByDefault="false"
        android:hint="@string/emailHint"
        android:textColor="@color/letter_medium_emphasis"
        app:boxCornerRadiusBottomEnd="@dimen/OutLinedBoxCorners"
        app:boxCornerRadiusBottomStart="@dimen/OutLinedBoxCorners"
        app:boxCornerRadiusTopEnd="@dimen/OutLinedBoxCorners"
        app:boxCornerRadiusTopStart="@dimen/OutLinedBoxCorners"
        app:boxStrokeColor="@color/letter_medium_emphasis"
        app:errorEnabled="true"
        app:hintTextColor="@color/letter_medium_emphasis"
        app:startIconDrawable="@drawable/ic_email_black_24dp"
        app:startIconTint="@color/primary_dark">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fieldInputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/poppins_medium"
            android:inputType="text"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/noThanks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:elevation="2dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/no_thanks"
            android:textColor="@color/primary"
            app:backgroundTint="@color/primary_dark"
            app:rippleColor="@color/rollover" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:layout_weight="1" />

        <Button
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:elevation="2dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/send"
            android:textColor="@color/primary"
            app:backgroundTint="@color/primary_dark"
            app:rippleColor="@color/rollover" />

    </LinearLayout>
</LinearLayout>


