<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ViewFlipper
        android:id="@+id/viewFlipper"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_weight="1"
        android:inAnimation="@android:anim/slide_in_left"
        android:outAnimation="@android:anim/slide_out_right">

        <LinearLayout
            android:id="@+id/item1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/vc_tut1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:text="@string/st_tut1"
                android:textColor="@color/letter_medium_emphasis"
                android:textSize="@dimen/letters_medium" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/vc_tut2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:text="@string/st_tut2"
                android:textColor="@color/letter_medium_emphasis"
                android:textSize="@dimen/letters_medium" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/vc_tut3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:text="@string/st_tut3"
                android:textColor="@color/letter_medium_emphasis"
                android:textSize="@dimen/letters_medium" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/item4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/vc_tut4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:text="@string/st_tut4"
                android:textColor="@color/letter_medium_emphasis"
                android:textSize="@dimen/letters_medium" />

        </LinearLayout>

    </ViewFlipper>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_prev"
            android:textColor="@color/primary"
            app:backgroundTint="@color/primary_dark"
            android:layout_margin="@dimen/activity_horizontal_margin"
            app:rippleColor="@color/rollover"
            android:elevation="2dp"
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/st_prev" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:layout_weight="1" />

        <Button
            android:id="@+id/bt_next"
            android:textColor="@color/primary"
            app:backgroundTint="@color/primary_dark"
            android:layout_margin="@dimen/activity_horizontal_margin"
            app:rippleColor="@color/rollover"
            android:elevation="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/st_next" />


    </LinearLayout>


</LinearLayout>